Go/pegi_parser.go
// Code generated from ./PegiParser.g4 by ANTLR 4.9.2. DO NOT EDIT.

package parser // PegiParser

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'interface'", "'struct'", "'parser'", "'import'", "", "'('", "')'",
	"'{'", "'}'", "'['", "']'", "'='", "','", "';'", "':'", "'.'", "'++'",
	"'--'", "':='", "'...'", "'||'", "'&&'", "'=='", "'!='", "'<'", "'<='",
	"'>'", "'>='", "'|'", "' / '", "'!'", "' + '", "' -'", "' - '", "'-'",
	"' * '",
}
var symbolicNames = []string{
	"", "INTERFACE", "STRUCT", "PARSER", "IMPORT", "IDENTIFIER", "L_PAREN",
	"R_PAREN", "L_CURLY", "R_CURLY", "L_BRACKET", "R_BRACKET", "ASSIGN", "COMMA",
	"SEMI", "COLON", "DOT", "PLUS_PLUS", "MINUS_MINUS", "DECLARE_ASSIGN", "ELLIPSIS",
	"LOGICAL_OR", "LOGICAL_AND", "EQUALS", "NOT_EQUALS", "LESS", "LESS_OR_EQUALS",
	"GREATER", "GREATER_OR_EQUALS", "OR", "DIV", "EXCLAMATION", "PLUS", "UNARY_MINUS",
	"MINUS", "MINUS_IN_NAME", "STAR", "DECIMAL_LIT", "BINARY_LIT", "OCTAL_LIT",
	"HEX_LIT", "FLOAT_LIT", "DECIMAL_FLOAT_LIT", "HEX_FLOAT_LIT", "RUNE_LIT",
	"BYTE_VALUE", "OCTAL_BYTE_VALUE", "HEX_BYTE_VALUE", "LITTLE_U_VALUE", "BIG_U_VALUE",
	"RAW_STRING_LIT", "INTERPRETED_STRING_LIT", "WS", "COMMENT", "TERMINATOR",
	"LINE_COMMENT",
}

var ruleNames = []string{
	"sourceFile", "parserClause", "importDecl", "importSpec", "importPath",
	"string_", "statementList", "statement", "shortVarDecl", "expressionList",
	"identifierList", "pipe", "pipeUnit", "pipeUnitIdentifers", "pipeUnitExpression",
	"expression", "primaryExpr", "operand", "literal", "functionCall", "arguments",
	"basicLit", "operandName", "unaryExpr", "sliceValue", "sliceValueSingleLine",
	"sliceValueMultiLine", "sliceValueMultiLineLine", "messageValue", "keyedElementKV",
	"keyedElementIdentifer", "keyedElement", "messageValueSingleLine", "messageValueMultiLine",
	"lineKeyedElement", "key", "element", "sliceType", "typeT", "typeName",
	"typeLit", "interfaceType", "fieldDecl", "integer", "eos",
}

type PegiParser struct {
	PegiParserBase
}

// NewPegiParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *PegiParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewPegiParser(input antlr.TokenStream) *PegiParser {
	this := new(PegiParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "PegiParser.g4"

	return this
}

// PegiParser tokens.
const (
	PegiParserEOF                    = antlr.TokenEOF
	PegiParserINTERFACE              = 1
	PegiParserSTRUCT                 = 2
	PegiParserPARSER                 = 3
	PegiParserIMPORT                 = 4
	PegiParserIDENTIFIER             = 5
	PegiParserL_PAREN                = 6
	PegiParserR_PAREN                = 7
	PegiParserL_CURLY                = 8
	PegiParserR_CURLY                = 9
	PegiParserL_BRACKET              = 10
	PegiParserR_BRACKET              = 11
	PegiParserASSIGN                 = 12
	PegiParserCOMMA                  = 13
	PegiParserSEMI                   = 14
	PegiParserCOLON                  = 15
	PegiParserDOT                    = 16
	PegiParserPLUS_PLUS              = 17
	PegiParserMINUS_MINUS            = 18
	PegiParserDECLARE_ASSIGN         = 19
	PegiParserELLIPSIS               = 20
	PegiParserLOGICAL_OR             = 21
	PegiParserLOGICAL_AND            = 22
	PegiParserEQUALS                 = 23
	PegiParserNOT_EQUALS             = 24
	PegiParserLESS                   = 25
	PegiParserLESS_OR_EQUALS         = 26
	PegiParserGREATER                = 27
	PegiParserGREATER_OR_EQUALS      = 28
	PegiParserOR                     = 29
	PegiParserDIV                    = 30
	PegiParserEXCLAMATION            = 31
	PegiParserPLUS                   = 32
	PegiParserUNARY_MINUS            = 33
	PegiParserMINUS                  = 34
	PegiParserMINUS_IN_NAME          = 35
	PegiParserSTAR                   = 36
	PegiParserDECIMAL_LIT            = 37
	PegiParserBINARY_LIT             = 38
	PegiParserOCTAL_LIT              = 39
	PegiParserHEX_LIT                = 40
	PegiParserFLOAT_LIT              = 41
	PegiParserDECIMAL_FLOAT_LIT      = 42
	PegiParserHEX_FLOAT_LIT          = 43
	PegiParserRUNE_LIT               = 44
	PegiParserBYTE_VALUE             = 45
	PegiParserOCTAL_BYTE_VALUE       = 46
	PegiParserHEX_BYTE_VALUE         = 47
	PegiParserLITTLE_U_VALUE         = 48
	PegiParserBIG_U_VALUE            = 49
	PegiParserRAW_STRING_LIT         = 50
	PegiParserINTERPRETED_STRING_LIT = 51
	PegiParserWS                     = 52
	PegiParserCOMMENT                = 53
	PegiParserTERMINATOR             = 54
	PegiParserLINE_COMMENT           = 55
)

// PegiParser rules.
const (
	PegiParserRULE_sourceFile              = 0
	PegiParserRULE_parserClause            = 1
	PegiParserRULE_importDecl              = 2
	PegiParserRULE_importSpec              = 3
	PegiParserRULE_importPath              = 4
	PegiParserRULE_string_                 = 5
	PegiParserRULE_statementList           = 6
	PegiParserRULE_statement               = 7
	PegiParserRULE_shortVarDecl            = 8
	PegiParserRULE_expressionList          = 9
	PegiParserRULE_identifierList          = 10
	PegiParserRULE_pipe                    = 11
	PegiParserRULE_pipeUnit                = 12
	PegiParserRULE_pipeUnitIdentifers      = 13
	PegiParserRULE_pipeUnitExpression      = 14
	PegiParserRULE_expression              = 15
	PegiParserRULE_primaryExpr             = 16
	PegiParserRULE_operand                 = 17
	PegiParserRULE_literal                 = 18
	PegiParserRULE_functionCall            = 19
	PegiParserRULE_arguments               = 20
	PegiParserRULE_basicLit                = 21
	PegiParserRULE_operandName             = 22
	PegiParserRULE_unaryExpr               = 23
	PegiParserRULE_sliceValue              = 24
	PegiParserRULE_sliceValueSingleLine    = 25
	PegiParserRULE_sliceValueMultiLine     = 26
	PegiParserRULE_sliceValueMultiLineLine = 27
	PegiParserRULE_messageValue            = 28
	PegiParserRULE_keyedElementKV          = 29
	PegiParserRULE_keyedElementIdentifer   = 30
	PegiParserRULE_keyedElement            = 31
	PegiParserRULE_messageValueSingleLine  = 32
	PegiParserRULE_messageValueMultiLine   = 33
	PegiParserRULE_lineKeyedElement        = 34
	PegiParserRULE_key                     = 35
	PegiParserRULE_element                 = 36
	PegiParserRULE_sliceType               = 37
	PegiParserRULE_typeT                   = 38
	PegiParserRULE_typeName                = 39
	PegiParserRULE_typeLit                 = 40
	PegiParserRULE_interfaceType           = 41
	PegiParserRULE_fieldDecl               = 42
	PegiParserRULE_integer                 = 43
	PegiParserRULE_eos                     = 44
)

// ISourceFileContext is an interface to support dynamic dispatch.
type ISourceFileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSourceFileContext differentiates from other interfaces.
	IsSourceFileContext()
}

type SourceFileContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySourceFileContext() *SourceFileContext {
	var p = new(SourceFileContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PegiParserRULE_sourceFile
	return p
}

func (*SourceFileContext) IsSourceFileContext() {}

func NewSourceFileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SourceFileContext {
	var p = new(SourceFileContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PegiParserRULE_sourceFile

	return p
}

func (s *SourceFileContext) GetParser() antlr.Parser { return s.parser }

func (s *SourceFileContext) EOF() antlr.TerminalNode {
	return s.GetToken(PegiParserEOF, 0)
}

func (s *SourceFileContext) ParserClause() IParserClauseContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IParserClauseContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IParserClauseContext)
}

func (s *SourceFileContext) AllEos() []IEosContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IEosContext)(nil)).Elem())
	var tst = make([]IEosContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IEosContext)
		}
	}

	return tst
}

func (s *SourceFileContext) Eos(i int) IEosContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEosContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IEosContext)
}

func (s *SourceFileContext) AllImportDecl() []IImportDeclContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IImportDeclContext)(nil)).Elem())
	var tst = make([]IImportDeclContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IImportDeclContext)
		}
	}

	return tst
}

func (s *SourceFileContext) ImportDecl(i int) IImportDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IImportDeclContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IImportDeclContext)
}

func (s *SourceFileContext) StatementList() IStatementListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStatementListContext)
}

func (s *SourceFileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SourceFileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SourceFileContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PegiParserListener); ok {
		listenerT.EnterSourceFile(s)
	}
}

func (s *SourceFileContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PegiParserListener); ok {
		listenerT.ExitSourceFile(s)
	}
}

func (s *SourceFileContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PegiParserVisitor:
		return t.VisitSourceFile(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PegiParser) SourceFile() (localctx ISourceFileContext) {
	localctx = NewSourceFileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PegiParserRULE_sourceFile)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(93)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == PegiParserPARSER {
		{
			p.SetState(90)
			p.ParserClause()
		}
		{
			p.SetState(91)
			p.Eos()
		}

	}
	p.SetState(100)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == PegiParserIMPORT {
		{
			p.SetState(95)
			p.ImportDecl()
		}
		{
			p.SetState(96)
			p.Eos()
		}

		p.SetState(102)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(104)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == PegiParserINTERFACE || _la == PegiParserIDENTIFIER {
		{
			p.SetState(103)
			p.StatementList()
		}

	}
	{
		p.SetState(106)
		p.Match(PegiParserEOF)
	}

	return localctx
}

// IParserClauseContext is an interface to support dynamic dispatch.
type IParserClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetParserPath returns the parserPath rule contexts.
	GetParserPath() IString_Context

	// SetParserPath sets the parserPath rule contexts.
	SetParserPath(IString_Context)

	// IsParserClauseContext differentiates from other interfaces.
	IsParserClauseContext()
}

type ParserClauseContext struct {
	*antlr.BaseParserRuleContext
	parser     antlr.Parser
	parserPath IString_Context
}

func NewEmptyParserClauseContext() *ParserClauseContext {
	var p = new(ParserClauseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PegiParserRULE_parserClause
	return p
}

func (*ParserClauseContext) IsParserClauseContext() {}

func NewParserClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParserClauseContext {
	var p = new(ParserClauseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PegiParserRULE_parserClause

	return p
}

func (s *ParserClauseContext) GetParser() antlr.Parser { return s.parser }

func (s *ParserClauseContext) GetParserPath() IString_Context { return s.parserPath }

func (s *ParserClauseContext) SetParserPath(v IString_Context) { s.parserPath = v }

func (s *ParserClauseContext) PARSER() antlr.TerminalNode {
	return s.GetToken(PegiParserPARSER, 0)
}

func (s *ParserClauseContext) String_() IString_Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IString_Context)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IString_Context)
}

func (s *ParserClauseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParserClauseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParserClauseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PegiParserListener); ok {
		listenerT.EnterParserClause(s)
	}
}

func (s *ParserClauseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PegiParserListener); ok {
		listenerT.ExitParserClause(s)
	}
}

func (s *ParserClauseContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PegiParserVisitor:
		return t.VisitParserClause(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PegiParser) ParserClause() (localctx IParserClauseContext) {
	localctx = NewParserClauseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, PegiParserRULE_parserClause)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(108)
		p.Match(PegiParserPARSER)
	}
	{
		p.SetState(109)

		var _x = p.String_()

		localctx.(*ParserClauseContext).parserPath = _x
	}

	return localctx
}

// IImportDeclContext is an interface to support dynamic dispatch.
type IImportDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsImportDeclContext differentiates from other interfaces.
	IsImportDeclContext()
}

type ImportDeclContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImportDeclContext() *ImportDeclContext {
	var p = new(ImportDeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PegiParserRULE_importDecl
	return p
}

func (*ImportDeclContext) IsImportDeclContext() {}

func NewImportDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportDeclContext {
	var p = new(ImportDeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PegiParserRULE_importDecl

	return p
}

func (s *ImportDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportDeclContext) IMPORT() antlr.TerminalNode {
	return s.GetToken(PegiParserIMPORT, 0)
}

func (s *ImportDeclContext) AllImportSpec() []IImportSpecContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IImportSpecContext)(nil)).Elem())
	var tst = make([]IImportSpecContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IImportSpecContext)
		}
	}

	return tst
}

func (s *ImportDeclContext) ImportSpec(i int) IImportSpecContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IImportSpecContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IImportSpecContext)
}

func (s *ImportDeclContext) L_PAREN() antlr.TerminalNode {
	return s.GetToken(PegiParserL_PAREN, 0)
}

func (s *ImportDeclContext) R_PAREN() antlr.TerminalNode {
	return s.GetToken(PegiParserR_PAREN, 0)
}

func (s *ImportDeclContext) AllEos() []IEosContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IEosContext)(nil)).Elem())
	var tst = make([]IEosContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IEosContext)
		}
	}

	return tst
}

func (s *ImportDeclContext) Eos(i int) IEosContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEosContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IEosContext)
}

func (s *ImportDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImportDeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PegiParserListener); ok {
		listenerT.EnterImportDecl(s)
	}
}

func (s *ImportDeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PegiParserListener); ok {
		listenerT.ExitImportDecl(s)
	}
}

func (s *ImportDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PegiParserVisitor:
		return t.VisitImportDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PegiParser) ImportDecl() (localctx IImportDeclContext) {
	localctx = NewImportDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, PegiParserRULE_importDecl)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(111)
		p.Match(PegiParserIMPORT)
	}
	p.SetState(123)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case PegiParserIDENTIFIER, PegiParserDOT, PegiParserRAW_STRING_LIT, PegiParserINTERPRETED_STRING_LIT:
		{
			p.SetState(112)
			p.ImportSpec()
		}

	case PegiParserL_PAREN:
		{
			p.SetState(113)
			p.Match(PegiParserL_PAREN)
		}
		p.SetState(119)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == PegiParserIDENTIFIER || _la == PegiParserDOT || _la == PegiParserRAW_STRING_LIT || _la == PegiParserINTERPRETED_STRING_LIT {
			{
				p.SetState(114)
				p.ImportSpec()
			}
			{
				p.SetState(115)
				p.Eos()
			}

			p.SetState(121)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(122)
			p.Match(PegiParserR_PAREN)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IImportSpecContext is an interface to support dynamic dispatch.
type IImportSpecContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetAlias returns the alias token.
	GetAlias() antlr.Token

	// SetAlias sets the alias token.
	SetAlias(antlr.Token)

	// IsImportSpecContext differentiates from other interfaces.
	IsImportSpecContext()
}

type ImportSpecContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	alias  antlr.Token
}

func NewEmptyImportSpecContext() *ImportSpecContext {
	var p = new(ImportSpecContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PegiParserRULE_importSpec
	return p
}

func (*ImportSpecContext) IsImportSpecContext() {}

func NewImportSpecContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportSpecContext {
	var p = new(ImportSpecContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PegiParserRULE_importSpec

	return p
}

func (s *ImportSpecContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportSpecContext) GetAlias() antlr.Token { return s.alias }

func (s *ImportSpecContext) SetAlias(v antlr.Token) { s.alias = v }

func (s *ImportSpecContext) ImportPath() IImportPathContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IImportPathContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IImportPathContext)
}

func (s *ImportSpecContext) DOT() antlr.TerminalNode {
	return s.GetToken(PegiParserDOT, 0)
}

func (s *ImportSpecContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(PegiParserIDENTIFIER, 0)
}

func (s *ImportSpecContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportSpecContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImportSpecContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PegiParserListener); ok {
		listenerT.EnterImportSpec(s)
	}
}

func (s *ImportSpecContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PegiParserListener); ok {
		listenerT.ExitImportSpec(s)
	}
}

func (s *ImportSpecContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PegiParserVisitor:
		return t.VisitImportSpec(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PegiParser) ImportSpec() (localctx IImportSpecContext) {
	localctx = NewImportSpecContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, PegiParserRULE_importSpec)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(126)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == PegiParserIDENTIFIER || _la == PegiParserDOT {
		{
			p.SetState(125)

			var _lt = p.GetTokenStream().LT(1)

			localctx.(*ImportSpecContext).alias = _lt

			_la = p.GetTokenStream().LA(1)

			if !(_la == PegiParserIDENTIFIER || _la == PegiParserDOT) {
				var _ri = p.GetErrorHandler().RecoverInline(p)

				localctx.(*ImportSpecContext).alias = _ri
			} else {
				p.GetErrorHandler().ReportMatch(p)
				p.Consume()
			}
		}

	}
	{
		p.SetState(128)
		p.ImportPath()
	}

	return localctx
}

// IImportPathContext is an interface to support dynamic dispatch.
type IImportPathContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsImportPathContext differentiates from other interfaces.
	IsImportPathContext()
}

type ImportPathContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImportPathContext() *ImportPathContext {
	var p = new(ImportPathContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PegiParserRULE_importPath
	return p
}

func (*ImportPathContext) IsImportPathContext() {}

func NewImportPathContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportPathContext {
	var p = new(ImportPathContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PegiParserRULE_importPath

	return p
}

func (s *ImportPathContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportPathContext) String_() IString_Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IString_Context)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IString_Context)
}

func (s *ImportPathContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportPathContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImportPathContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PegiParserListener); ok {
		listenerT.EnterImportPath(s)
	}
}

func (s *ImportPathContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PegiParserListener); ok {
		listenerT.ExitImportPath(s)
	}
}
